add get run report
